Fixed some of layout/overlap issues on options page.

--- a/app/sass/buttons.scss
+++ b/app/sass/buttons.scss
@@ -25,6 +25,9 @@ $btn_color: #333;
 a.btn {
 	color: #f0f0f0;
 }
+input[type=button].btn {
+	-webkit-appearance: none;
+}
 .btn:hover {
 	background-color: rgba(255, 255, 255, 0.15);
 }
